AG-40160: fixed popup width
Squashed commit of the following:

commit 544e91d96d055a0f24061ea713f5d780c895ebd2
Author: Dmitriy Seregin <d.seregin@adguard.com>
Date:   Thu Feb 27 21:17:35 2025 +0300

    AG-40160: fixed popup width

--- a/Extension/src/pages/popup/components/Popup/popup.pcss
+++ b/Extension/src/pages/popup/components/Popup/popup.pcss
@@ -6,4 +6,12 @@
     justify-content: flex-start;
     align-items: stretch;
     flex-direction: column;
+
+    /*
+     * Limit width of header with popup width.
+     * Because url of current site is non-breakable string and in Firefox it renders
+     * with following width: 16px padding left + string width + 16px padding right
+     * and introduces inconsistent popup width.
+     */
+    max-width: var(--popup-width);
 }
